fix(renderer): captured image size display, was horizontal squashed

--- a/src/renderer/css/styles.css
+++ b/src/renderer/css/styles.css
@@ -172,7 +172,9 @@ main::-webkit-scrollbar-thumb {
 .read-item img {
   width: 20%;
   margin-right: 2.5rem;
-  aspect-ratio: 1;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  object-position: top center;
 }
 
 .show {
